Introduce cluster assignment attribute to execution spec (#255)
* checkpoint


* one more


* good riddance


* one more


* revert
