# flyteidl/gen/pb-go/flyteidl/admin/execution.pb.validate.go
@@ -1352,6 +1352,16 @@ func (m *ExecutionSpec) Validate() error {
 		}
 	}
 
+	if v, ok := interface{}(m.GetClusterAssignment()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ExecutionSpecValidationError{
+				field:  "ClusterAssignment",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
 	switch m.NotificationOverrides.(type) {
 
 	case *ExecutionSpec_Notifications:
