# flyteidl/gen/pb-go/flyteidl/service/admin.swagger.json
@@ -1240,7 +1240,7 @@
         "parameters": [
           {
             "name": "resource_type",
-            "description": "+required.\n\n - TASK_RESOURCE: Applies to customizable task resource requests and limits.\n - CLUSTER_RESOURCE: Applies to configuring templated kubernetes cluster resources.\n - EXECUTION_QUEUE: Configures task and dynamic task execution queue assignment.\n - EXECUTION_CLUSTER_LABEL: Configures the K8s cluster label to be used for execution to be run\n - QUALITY_OF_SERVICE_SPECIFICATION: Configures default quality of service when undefined in an execution spec.\n - PLUGIN_OVERRIDE: Selects configurable plugin implementation behavior for a given task type.\n - WORKFLOW_EXECUTION_CONFIG: Adds defaults for customizable workflow-execution specifications and overrides.",
+            "description": "+required.\n\n - TASK_RESOURCE: Applies to customizable task resource requests and limits.\n - CLUSTER_RESOURCE: Applies to configuring templated kubernetes cluster resources.\n - EXECUTION_QUEUE: Configures task and dynamic task execution queue assignment.\n - EXECUTION_CLUSTER_LABEL: Configures the K8s cluster label to be used for execution to be run\n - QUALITY_OF_SERVICE_SPECIFICATION: Configures default quality of service when undefined in an execution spec.\n - PLUGIN_OVERRIDE: Selects configurable plugin implementation behavior for a given task type.\n - WORKFLOW_EXECUTION_CONFIG: Adds defaults for customizable workflow-execution specifications and overrides.\n - CLUSTER_ASSIGNMENT: Controls how to select an available cluster on which this execution should run.",
             "in": "query",
             "required": false,
             "type": "string",
@@ -1251,7 +1251,8 @@
               "EXECUTION_CLUSTER_LABEL",
               "QUALITY_OF_SERVICE_SPECIFICATION",
               "PLUGIN_OVERRIDE",
-              "WORKFLOW_EXECUTION_CONFIG"
+              "WORKFLOW_EXECUTION_CONFIG",
+              "CLUSTER_ASSIGNMENT"
             ],
             "default": "TASK_RESOURCE"
           }
@@ -1673,7 +1674,7 @@
           },
           {
             "name": "resource_type",
-            "description": "Which type of matchable attributes to return.\n+required.\n\n - TASK_RESOURCE: Applies to customizable task resource requests and limits.\n - CLUSTER_RESOURCE: Applies to configuring templated kubernetes cluster resources.\n - EXECUTION_QUEUE: Configures task and dynamic task execution queue assignment.\n - EXECUTION_CLUSTER_LABEL: Configures the K8s cluster label to be used for execution to be run\n - QUALITY_OF_SERVICE_SPECIFICATION: Configures default quality of service when undefined in an execution spec.\n - PLUGIN_OVERRIDE: Selects configurable plugin implementation behavior for a given task type.\n - WORKFLOW_EXECUTION_CONFIG: Adds defaults for customizable workflow-execution specifications and overrides.",
+            "description": "Which type of matchable attributes to return.\n+required.\n\n - TASK_RESOURCE: Applies to customizable task resource requests and limits.\n - CLUSTER_RESOURCE: Applies to configuring templated kubernetes cluster resources.\n - EXECUTION_QUEUE: Configures task and dynamic task execution queue assignment.\n - EXECUTION_CLUSTER_LABEL: Configures the K8s cluster label to be used for execution to be run\n - QUALITY_OF_SERVICE_SPECIFICATION: Configures default quality of service when undefined in an execution spec.\n - PLUGIN_OVERRIDE: Selects configurable plugin implementation behavior for a given task type.\n - WORKFLOW_EXECUTION_CONFIG: Adds defaults for customizable workflow-execution specifications and overrides.\n - CLUSTER_ASSIGNMENT: Controls how to select an available cluster on which this execution should run.",
             "in": "query",
             "required": false,
             "type": "string",
@@ -1684,7 +1685,8 @@
               "EXECUTION_CLUSTER_LABEL",
               "QUALITY_OF_SERVICE_SPECIFICATION",
               "PLUGIN_OVERRIDE",
-              "WORKFLOW_EXECUTION_CONFIG"
+              "WORKFLOW_EXECUTION_CONFIG",
+              "CLUSTER_ASSIGNMENT"
             ],
             "default": "TASK_RESOURCE"
           }
@@ -2482,7 +2484,7 @@
           },
           {
             "name": "resource_type",
-            "description": "Which type of matchable attributes to return.\n+required.\n\n - TASK_RESOURCE: Applies to customizable task resource requests and limits.\n - CLUSTER_RESOURCE: Applies to configuring templated kubernetes cluster resources.\n - EXECUTION_QUEUE: Configures task and dynamic task execution queue assignment.\n - EXECUTION_CLUSTER_LABEL: Configures the K8s cluster label to be used for execution to be run\n - QUALITY_OF_SERVICE_SPECIFICATION: Configures default quality of service when undefined in an execution spec.\n - PLUGIN_OVERRIDE: Selects configurable plugin implementation behavior for a given task type.\n - WORKFLOW_EXECUTION_CONFIG: Adds defaults for customizable workflow-execution specifications and overrides.",
+            "description": "Which type of matchable attributes to return.\n+required.\n\n - TASK_RESOURCE: Applies to customizable task resource requests and limits.\n - CLUSTER_RESOURCE: Applies to configuring templated kubernetes cluster resources.\n - EXECUTION_QUEUE: Configures task and dynamic task execution queue assignment.\n - EXECUTION_CLUSTER_LABEL: Configures the K8s cluster label to be used for execution to be run\n - QUALITY_OF_SERVICE_SPECIFICATION: Configures default quality of service when undefined in an execution spec.\n - PLUGIN_OVERRIDE: Selects configurable plugin implementation behavior for a given task type.\n - WORKFLOW_EXECUTION_CONFIG: Adds defaults for customizable workflow-execution specifications and overrides.\n - CLUSTER_ASSIGNMENT: Controls how to select an available cluster on which this execution should run.",
             "in": "query",
             "required": false,
             "type": "string",
@@ -2493,7 +2495,8 @@
               "EXECUTION_CLUSTER_LABEL",
               "QUALITY_OF_SERVICE_SPECIFICATION",
               "PLUGIN_OVERRIDE",
-              "WORKFLOW_EXECUTION_CONFIG"
+              "WORKFLOW_EXECUTION_CONFIG",
+              "CLUSTER_ASSIGNMENT"
             ],
             "default": "TASK_RESOURCE"
           }
@@ -2910,20 +2913,6 @@
       "default": "RESERVATION_DISABLED",
       "description": "Indicates the status of a catalog reservation operation.\n\n - RESERVATION_DISABLED: Used to indicate that reservations are disabled\n - RESERVATION_ACQUIRED: Used to indicate that a reservation was successfully acquired or extended\n - RESERVATION_EXISTS: Used to indicate that an active reservation currently exists\n - RESERVATION_RELEASED: Used to indicate that the reservation has been successfully released\n - RESERVATION_FAILURE: Used to indicate that a reservation operation resulted in failure"
     },
-    "ComparisonExpressionOperator": {
-      "type": "string",
-      "enum": [
-        "EQ",
-        "NEQ",
-        "GT",
-        "GTE",
-        "LT",
-        "LTE"
-      ],
-      "default": "EQ",
-      "description": "- GT: Greater Than\n - LT: Less Than",
-      "title": "Binary Operator for each expression"
-    },
     "ConjunctionExpressionLogicalOperator": {
       "type": "string",
       "enum": [
@@ -3188,6 +3177,19 @@
       },
       "description": "Specifies metadata around an aborted workflow execution."
     },
+    "adminAffinity": {
+      "type": "object",
+      "properties": {
+        "selectors": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/adminSelector"
+          },
+          "description": "Multiples selectors are 'and'-ed together to produce the list of matching, eligible objects."
+        }
+      },
+      "description": "Defines a set of constraints used to select eligible objects based on labels they possess."
+    },
     "adminAnnotations": {
       "type": "object",
       "properties": {
@@ -3228,6 +3230,15 @@
         }
       },
       "description": "Defines permissions associated with executions created by this launch plan spec.\nUse either of these roles when they have permissions required by your workflow execution.\nDeprecated."
+    },
+    "adminClusterAssignment": {
+      "type": "object",
+      "properties": {
+        "affinity": {
+          "$ref": "#/definitions/adminAffinity"
+        }
+      },
+      "description": "Encapsulates specifications for routing an execution onto a specific cluster."
     },
     "adminClusterResourceAttributes": {
       "type": "object",
@@ -3559,6 +3570,10 @@
         "raw_output_data_config": {
           "$ref": "#/definitions/adminRawOutputDataConfig",
           "title": "User setting to configure where to store offloaded data (i.e. Blobs, structured datasets, query data, etc.).\nThis should be a prefix like s3://my-bucket/my-data"
+        },
+        "cluster_assignment": {
+          "$ref": "#/definitions/adminClusterAssignment",
+          "description": "Controls how to select an available cluster on which this execution should run."
         }
       },
       "description": "An ExecutionSpec encompasses all data used to launch this execution. The Spec does not change over the lifetime\nof an execution as it progresses across phase changes."
@@ -3906,10 +3921,11 @@
         "EXECUTION_CLUSTER_LABEL",
         "QUALITY_OF_SERVICE_SPECIFICATION",
         "PLUGIN_OVERRIDE",
-        "WORKFLOW_EXECUTION_CONFIG"
+        "WORKFLOW_EXECUTION_CONFIG",
+        "CLUSTER_ASSIGNMENT"
       ],
       "default": "TASK_RESOURCE",
-      "description": "Defines a resource that can be configured by customizable Project-, ProjectDomain- or WorkflowAttributes\nbased on matching tags.\n\n - TASK_RESOURCE: Applies to customizable task resource requests and limits.\n - CLUSTER_RESOURCE: Applies to configuring templated kubernetes cluster resources.\n - EXECUTION_QUEUE: Configures task and dynamic task execution queue assignment.\n - EXECUTION_CLUSTER_LABEL: Configures the K8s cluster label to be used for execution to be run\n - QUALITY_OF_SERVICE_SPECIFICATION: Configures default quality of service when undefined in an execution spec.\n - PLUGIN_OVERRIDE: Selects configurable plugin implementation behavior for a given task type.\n - WORKFLOW_EXECUTION_CONFIG: Adds defaults for customizable workflow-execution specifications and overrides."
+      "description": "Defines a resource that can be configured by customizable Project-, ProjectDomain- or WorkflowAttributes\nbased on matching tags.\n\n - TASK_RESOURCE: Applies to customizable task resource requests and limits.\n - CLUSTER_RESOURCE: Applies to configuring templated kubernetes cluster resources.\n - EXECUTION_QUEUE: Configures task and dynamic task execution queue assignment.\n - EXECUTION_CLUSTER_LABEL: Configures the K8s cluster label to be used for execution to be run\n - QUALITY_OF_SERVICE_SPECIFICATION: Configures default quality of service when undefined in an execution spec.\n - PLUGIN_OVERRIDE: Selects configurable plugin implementation behavior for a given task type.\n - WORKFLOW_EXECUTION_CONFIG: Adds defaults for customizable workflow-execution specifications and overrides.\n - CLUSTER_ASSIGNMENT: Controls how to select an available cluster on which this execution should run."
     },
     "adminMatchingAttributes": {
       "type": "object",
@@ -3934,6 +3950,9 @@
         },
         "workflow_execution_config": {
           "$ref": "#/definitions/adminWorkflowExecutionConfig"
+        },
+        "cluster_assignment": {
+          "$ref": "#/definitions/adminClusterAssignment"
         }
       },
       "description": "Generic container for encapsulating all types of the above attributes messages."
@@ -4416,6 +4435,38 @@
         }
       },
       "description": "Defines complete set of information required to trigger an execution on a schedule."
+    },
+    "adminSelector": {
+      "type": "object",
+      "properties": {
+        "key": {
+          "type": "string",
+          "description": "The label key."
+        },
+        "value": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": "One or more values used to match labels.\nFor equality (or inequality) requirements, values must contain a single element.\nFor set-based requirements, values may contain one or more elements."
+        },
+        "operator": {
+          "$ref": "#/definitions/adminSelectorOperator"
+        }
+      },
+      "description": "A Selector is a specification for identifying a set of objects with corresponding labels."
+    },
+    "adminSelectorOperator": {
+      "type": "string",
+      "enum": [
+        "EQUALS",
+        "NOT_EQUALS",
+        "IN",
+        "NOT_IN",
+        "EXISTS"
+      ],
+      "default": "EQUALS",
+      "description": "Defines how a label with a corresponding key and value is selected or excluded."
     },
     "adminSlackNotification": {
       "type": "object",
@@ -5106,7 +5157,7 @@
       "type": "object",
       "properties": {
         "operator": {
-          "$ref": "#/definitions/ComparisonExpressionOperator"
+          "$ref": "#/definitions/coreComparisonExpressionOperator"
         },
         "left_value": {
           "$ref": "#/definitions/coreOperand"
@@ -5116,6 +5167,20 @@
         }
       },
       "description": "Defines a 2-level tree where the root is a comparison operator and Operands are primitives or known variables.\nEach expression results in a boolean result."
+    },
+    "coreComparisonExpressionOperator": {
+      "type": "string",
+      "enum": [
+        "EQ",
+        "NEQ",
+        "GT",
+        "GTE",
+        "LT",
+        "LTE"
+      ],
+      "default": "EQ",
+      "description": "- GT: Greater Than\n - LT: Less Than",
+      "title": "Binary Operator for each expression"
     },
     "coreCompiledTask": {
       "type": "object",
