# flyteidl/gen/pb-go/flyteidl/service/flyteadmin/model_admin_selector.go
@@ -1,0 +1,19 @@
+/*
+ * flyteidl/service/admin.proto
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: version not set
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package flyteadmin
+
+// A Selector is a specification for identifying a set of objects with corresponding labels.
+type AdminSelector struct {
+	// The label key.
+	Key string `json:"key,omitempty"`
+	// One or more values used to match labels. For equality (or inequality) requirements, values must contain a single element. For set-based requirements, values may contain one or more elements.
+	Value []string `json:"value,omitempty"`
+	Operator *AdminSelectorOperator `json:"operator,omitempty"`
+}
