# flyteidl/gen/pb-go/flyteidl/service/flyteadmin/model_admin_selector_operator.go
@@ -1,0 +1,21 @@
+/*
+ * flyteidl/service/admin.proto
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: version not set
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package flyteadmin
+// AdminSelectorOperator : Defines how a label with a corresponding key and value is selected or excluded.
+type AdminSelectorOperator string
+
+// List of adminSelectorOperator
+const (
+	AdminSelectorOperatorEQUALS AdminSelectorOperator = "EQUALS"
+	AdminSelectorOperatorNOT_EQUALS AdminSelectorOperator = "NOT_EQUALS"
+	AdminSelectorOperatorIN AdminSelectorOperator = "IN"
+	AdminSelectorOperatorNOT_IN AdminSelectorOperator = "NOT_IN"
+	AdminSelectorOperatorEXISTS AdminSelectorOperator = "EXISTS"
+)
