# flyteidl/gen/pb-go/flyteidl/service/flyteadmin/model_core_comparison_expression_operator.go
@@ -1,0 +1,22 @@
+/*
+ * flyteidl/service/admin.proto
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: version not set
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package flyteadmin
+// CoreComparisonExpressionOperator : - GT: Greater Than  - LT: Less Than
+type CoreComparisonExpressionOperator string
+
+// List of coreComparisonExpressionOperator
+const (
+	CoreComparisonExpressionOperatorEQ CoreComparisonExpressionOperator = "EQ"
+	CoreComparisonExpressionOperatorNEQ CoreComparisonExpressionOperator = "NEQ"
+	CoreComparisonExpressionOperatorGT CoreComparisonExpressionOperator = "GT"
+	CoreComparisonExpressionOperatorGTE CoreComparisonExpressionOperator = "GTE"
+	CoreComparisonExpressionOperatorLT CoreComparisonExpressionOperator = "LT"
+	CoreComparisonExpressionOperatorLTE CoreComparisonExpressionOperator = "LTE"
+)
