# flyteidl/gen/pb_python/flyteidl/service/flyteadmin/flyteadmin/models/admin_selector.py
@@ -1,0 +1,173 @@
+# coding: utf-8
+
+"""
+    flyteidl/service/admin.proto
+
+    No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)  # noqa: E501
+
+    OpenAPI spec version: version not set
+    
+    Generated by: https://github.com/swagger-api/swagger-codegen.git
+"""
+
+
+import pprint
+import re  # noqa: F401
+
+import six
+
+from flyteadmin.models.admin_selector_operator import AdminSelectorOperator  # noqa: F401,E501
+
+
+class AdminSelector(object):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    """
+    Attributes:
+      swagger_types (dict): The key is attribute name
+                            and the value is attribute type.
+      attribute_map (dict): The key is attribute name
+                            and the value is json key in definition.
+    """
+    swagger_types = {
+        'key': 'str',
+        'value': 'list[str]',
+        'operator': 'AdminSelectorOperator'
+    }
+
+    attribute_map = {
+        'key': 'key',
+        'value': 'value',
+        'operator': 'operator'
+    }
+
+    def __init__(self, key=None, value=None, operator=None):  # noqa: E501
+        """AdminSelector - a model defined in Swagger"""  # noqa: E501
+
+        self._key = None
+        self._value = None
+        self._operator = None
+        self.discriminator = None
+
+        if key is not None:
+            self.key = key
+        if value is not None:
+            self.value = value
+        if operator is not None:
+            self.operator = operator
+
+    @property
+    def key(self):
+        """Gets the key of this AdminSelector.  # noqa: E501
+
+        The label key.  # noqa: E501
+
+        :return: The key of this AdminSelector.  # noqa: E501
+        :rtype: str
+        """
+        return self._key
+
+    @key.setter
+    def key(self, key):
+        """Sets the key of this AdminSelector.
+
+        The label key.  # noqa: E501
+
+        :param key: The key of this AdminSelector.  # noqa: E501
+        :type: str
+        """
+
+        self._key = key
+
+    @property
+    def value(self):
+        """Gets the value of this AdminSelector.  # noqa: E501
+
+        One or more values used to match labels. For equality (or inequality) requirements, values must contain a single element. For set-based requirements, values may contain one or more elements.  # noqa: E501
+
+        :return: The value of this AdminSelector.  # noqa: E501
+        :rtype: list[str]
+        """
+        return self._value
+
+    @value.setter
+    def value(self, value):
+        """Sets the value of this AdminSelector.
+
+        One or more values used to match labels. For equality (or inequality) requirements, values must contain a single element. For set-based requirements, values may contain one or more elements.  # noqa: E501
+
+        :param value: The value of this AdminSelector.  # noqa: E501
+        :type: list[str]
+        """
+
+        self._value = value
+
+    @property
+    def operator(self):
+        """Gets the operator of this AdminSelector.  # noqa: E501
+
+
+        :return: The operator of this AdminSelector.  # noqa: E501
+        :rtype: AdminSelectorOperator
+        """
+        return self._operator
+
+    @operator.setter
+    def operator(self, operator):
+        """Sets the operator of this AdminSelector.
+
+
+        :param operator: The operator of this AdminSelector.  # noqa: E501
+        :type: AdminSelectorOperator
+        """
+
+        self._operator = operator
+
+    def to_dict(self):
+        """Returns the model properties as a dict"""
+        result = {}
+
+        for attr, _ in six.iteritems(self.swagger_types):
+            value = getattr(self, attr)
+            if isinstance(value, list):
+                result[attr] = list(map(
+                    lambda x: x.to_dict() if hasattr(x, "to_dict") else x,
+                    value
+                ))
+            elif hasattr(value, "to_dict"):
+                result[attr] = value.to_dict()
+            elif isinstance(value, dict):
+                result[attr] = dict(map(
+                    lambda item: (item[0], item[1].to_dict())
+                    if hasattr(item[1], "to_dict") else item,
+                    value.items()
+                ))
+            else:
+                result[attr] = value
+        if issubclass(AdminSelector, dict):
+            for key, value in self.items():
+                result[key] = value
+
+        return result
+
+    def to_str(self):
+        """Returns the string representation of the model"""
+        return pprint.pformat(self.to_dict())
+
+    def __repr__(self):
+        """For `print` and `pprint`"""
+        return self.to_str()
+
+    def __eq__(self, other):
+        """Returns true if both objects are equal"""
+        if not isinstance(other, AdminSelector):
+            return False
+
+        return self.__dict__ == other.__dict__
+
+    def __ne__(self, other):
+        """Returns true if both objects are not equal"""
+        return not self == other
